# SouqSync

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  PR_CREATION_GUIDE.md  README.md  Stitch-SoukSync.md  docker-compose.yml  stitch.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_models.py  0002_languages_translations_currencies_tenants_settings.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  auth.py  credit.py  currencies.py  health.py  languages.py  orders.py  products.py  settings.py  tenants.py  translations.py  users.py  webhooks.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: base.py  database.py  seed.py
backend/app/models/: __init__.py  base.py  credit_profile.py  currency.py  language.py  order.py  product.py  setting.py  tenant.py  translation.py  user.py
backend/app/repositories/: base.py  credit_repo.py  currency_repo.py  language_repo.py  order_repo.py  product_repo.py  setting_repo.py  translation_repo.py
backend/app/schemas/: auth.py  common.py  credit.py  currency.py  language.py  order.py  product.py  setting.py  tenant.py  translation.py  user.py
backend/app/services/: auth_service.py  bot_handler.py  conversation.py  copy.py  telegram_bot.py
backend/scripts/: healthcheck.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_auth_security.py  test_bot_flow.py  test_currencies_api.py  test_health_api.py  (+1 more)
(+80 files in other folders)
